; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/extr_ordered-events.c_free_dup_event.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/extr_ordered-events.c_free_dup_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ordered_events = type { i64 }
%union.perf_event = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ordered_events*, %union.perf_event*)* @free_dup_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_dup_event(%struct.ordered_events* %0, %union.perf_event* %1) #0 {
  %3 = alloca %struct.ordered_events*, align 8
  %4 = alloca %union.perf_event*, align 8
  store %struct.ordered_events* %0, %struct.ordered_events** %3, align 8
  store %union.perf_event* %1, %union.perf_event** %4, align 8
  %5 = load %struct.ordered_events*, %struct.ordered_events** %3, align 8
  %6 = getelementptr inbounds %struct.ordered_events, %struct.ordered_events* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %2
  %10 = load %struct.ordered_events*, %struct.ordered_events** %3, align 8
  %11 = load %union.perf_event*, %union.perf_event** %4, align 8
  %12 = call i32 @__free_dup_event(%struct.ordered_events* %10, %union.perf_event* %11)
  br label %13

13:                                               ; preds = %9, %2
  ret void
}

declare dso_local i32 @__free_dup_event(%struct.ordered_events*, %union.perf_event*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
